Fix missing colors

--- a/aoe-web-frontend/src/app/views/search-results-view/search-results-view.component.scss
+++ b/aoe-web-frontend/src/app/views/search-results-view/search-results-view.component.scss
@@ -72,6 +72,8 @@
 .search-filter {
   font-weight: 500;
   margin-right: 0.25rem;
+  background-color: variables.$light;
+  color: variables.$dark;
   @include mixins.resize(14px);
 
   button {
